--- a/styles.scss
+++ b/styles.scss
@@ -5,3 +5,20 @@ body {
   resize: both;
   overflow: hidden;
 }
+
+footer {
+  position: fixed;
+  bottom: 0;
+  .Taskbar {
+    background-color: rgba(39, 39, 39, 0.808);
+    padding: 0.55rem;
+  }
+  .Taskbar__Start {
+    background-image: url("images/icons8-windows-10-30White.png");
+    background-repeat: no-repeat;
+
+    &:hover {
+      background-image: url("images/icons8-windows-10blue.svg");
+    }
+  }
+}
