fixed image references in css

--- a/styles.scss
+++ b/styles.scss
@@ -18,7 +18,7 @@ footer {
     background-repeat: no-repeat;
 
     &:hover {
-      background-image: url("images/icons8-windows-10blue.svg");
+      background-image: url("images/icons8-windows-10-30Blue.png");
     }
   }
 }
