--- a/styles.css
+++ b/styles.css
@@ -19,5 +19,5 @@ footer .Taskbar__Start {
   background-repeat: no-repeat;
 }
 footer .Taskbar__Start:hover {
-  background-image: url("images/icons8-windows-10blue.svg");
+  background-image: url("images/icons8-windows-10-30Blue.png");
 }/*# sourceMappingURL=styles.css.map */
