--- a/styles.scss
+++ b/styles.scss
@@ -9,16 +9,28 @@ body {
 footer {
   position: fixed;
   bottom: 0;
+  left: 0;
+
   .Taskbar {
     background-color: rgba(39, 39, 39, 0.808);
     padding: 0.55rem;
-  }
-  .Taskbar__Start {
-    background-image: url("images/icons8-windows-10-30White.png");
-    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: row;
 
-    &:hover {
-      background-image: url("images/icons8-windows-10-30Blue.png");
+    .Taskbar__Start {
+      background-image: url("images/icons8-windows-10-30White.png");
+      background-repeat: no-repeat;
+
+      &:hover {
+        background-image: url("images/icons8-windows-10-30Blue.png");
+      }
+    }
+
+    .Taskbar__ClockHolder {
+      flex-direction: column;
+      font-size: 1rem;
+      margin: 0rem;
+      padding: 0rem;
     }
   }
 }
