--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ footer {
 }
 footer .Taskbar {
   background-color: rgba(39, 39, 39, 0.808);
-  padding: 0.55rem;
   display: flex;
   flex-direction: row;
 }
@@ -24,9 +23,18 @@ footer .Taskbar .Taskbar__Start {
 footer .Taskbar .Taskbar__Start:hover {
   background-image: url("images/icons8-windows-10-30Blue.png");
 }
+footer .Taskbar .Taskbar__Search {
+  background-color: rgba(39, 39, 39, 0.808);
+  border: 1px solid white;
+}
+footer .Taskbar .Taskbar__Search:hover {
+  border: 1px solid rgb(219, 219, 219);
+}
+footer .Taskbar .Taskbar__Search .Taskbar__SearchBar {
+  background-color: rgba(39, 39, 39, 0.808);
+  color: rgb(219, 219, 219);
+}
 footer .Taskbar .Taskbar__ClockHolder {
   flex-direction: column;
   font-size: 1rem;
-  margin: 0rem;
-  padding: 0rem;
 }/*# sourceMappingURL=styles.css.map */
