--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ footer {
 }
 footer .Taskbar {
   background-color: rgba(39, 39, 39, 0.808);
+  width: 100vw;
   display: flex;
   flex-direction: row;
 }
