--- a/styles.scss
+++ b/styles.scss
@@ -15,7 +15,7 @@ footer {
 
   .Taskbar {
     background-color: $taskbarBlack;
-
+    width: 100vw;
     display: flex;
     flex-direction: row;
 
