--- a/_theme.scss
+++ b/_theme.scss
@@ -1,2 +1,3 @@
 $taskbarBlack: rgba(39, 39, 39, 0.808);
-$taskbarSearchBarGrey: rgb(219, 219, 219);
+$taskbarSearchBarGrey: rgb(182, 182, 182);
+$taskbarHoverGrey: rgb(110, 110, 110);
