--- a/styles.css
+++ b/styles.css
@@ -26,16 +26,36 @@ footer .Taskbar .Taskbar__Start:hover {
 }
 footer .Taskbar .Taskbar__Search {
   background-color: rgba(39, 39, 39, 0.808);
-  border: 1px solid white;
+  align-self: center;
+  border: 1.5px solid white;
 }
 footer .Taskbar .Taskbar__Search:hover {
-  border: 1px solid rgb(219, 219, 219);
+  border: 1.5px solid rgb(182, 182, 182);
 }
 footer .Taskbar .Taskbar__Search .Taskbar__SearchBar {
   background-color: rgba(39, 39, 39, 0.808);
-  color: rgb(219, 219, 219);
+  color: rgb(182, 182, 182);
+  border-style: none;
+  padding: 0.5rem;
+}
+footer .Taskbar .TaskBar__IconHolder {
+  display: flex;
+  justify-content: center;
+}
+footer .Taskbar .TaskBar__IconHolder .Taskbar__Icon span:hover {
+  background-color: rgb(110, 110, 110);
+}
+footer .Taskbar .TaskBar__IconHolder .Taskbar__Icon img {
+  margin: 0.3rem;
+}
+footer .Taskbar .TaskBar__IconHolder .Taskbar__Icon img:hover {
+  background-color: rgb(110, 110, 110);
 }
 footer .Taskbar .Taskbar__ClockHolder {
+  display: flex;
   flex-direction: column;
   font-size: 1rem;
+}
+footer .Taskbar .Taskbar__ClockHolder:hover {
+  background-color: rgb(110, 110, 110);
 }/*# sourceMappingURL=styles.css.map */
