--- a/styles.scss
+++ b/styles.scss
@@ -18,6 +18,7 @@ footer {
     width: 100vw;
     display: flex;
     flex-direction: row;
+    //justify-content: space-between;
 
     .Taskbar__Start {
       background-image: url("images/icons8-windows-10-30White.png");
@@ -29,20 +30,45 @@ footer {
     }
     .Taskbar__Search {
       background-color: $taskbarBlack;
-
-      border: 1px solid white;
+      align-self: center;
+      border: 1.5px solid white;
       &:hover {
-        border: 1px solid $taskbarSearchBarGrey;
+        border: 1.5px solid $taskbarSearchBarGrey;
       }
+
       .Taskbar__SearchBar {
         background-color: $taskbarBlack;
         color: $taskbarSearchBarGrey;
+        border-style: none;
+        padding: 0.5rem; //on click this needs to change to invert text and background colors and pop up a menu
+      }
+    }
+
+    .TaskBar__IconHolder {
+      display: flex;
+      justify-content: center;
+      .Taskbar__Icon span {
+        &:hover {
+          background-color: $taskbarHoverGrey;
+        }
+      }
+
+      .Taskbar__Icon img {
+        margin: 0.3rem;
+
+        &:hover {
+          background-color: $taskbarHoverGrey;
+        }
       }
     }
 
     .Taskbar__ClockHolder {
+      display: flex;
       flex-direction: column;
       font-size: 1rem;
+      &:hover {
+        background-color: $taskbarHoverGrey;
+      }
     }
   }
 }
