--- a/styles.scss
+++ b/styles.scss
@@ -7,10 +7,33 @@ body {
   resize: both;
   overflow: hidden;
 }
+.desktop {
+  .desktop__Icon {
+    img {
+      height: 5rem;
+    }
+  }
+}
 
-.desktop__Icon {
-  img {
-    height: 5rem;
+.StartMenu {
+  //this needs to be at the bottom of the screen
+  position: fixed;
+  bottom: 0;
+  background-color: $taskbarBlack;
+
+  .StartMenu__Icons {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 3rem; //hacky, but they are in the right place
+    margin-left: 2rem;
+  }
+  .StartMenu__SettingsOptions {
+    display: flex;
+    flex-direction: column-reverse;
+    img {
+      height: 1.5rem;
+      padding: 1rem;
+    }
   }
 }
 
@@ -31,7 +54,8 @@ footer {
       background-repeat: no-repeat;
 
       &:hover {
-        background-image: url("images/icons8-windows-10-30Blue.png");
+        background-image: url("images/icons8-windows-10-30Blue.png"); //this isn't the right blue
+        background-color: $taskbarHoverGrey;
       }
     }
     .Taskbar__Search {
