--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ body {
   left: 0;
   display: flex;
   flex-direction: column-reverse;
+  height: 50vh;
+  width: 30vw;
 }
 .StartMenu .StartMenu__Icons {
   margin-left: 4rem;
