--- a/styles.scss
+++ b/styles.scss
@@ -24,6 +24,8 @@ body {
   left: 0;
   display: flex;
   flex-direction: column-reverse;
+  height: 50vh;
+  width: 30vw;
 
   .StartMenu__Icons {
     //margin-bottom: 1rem; //hacky, but they are in the right place
