added color for desktop icon hover to themes. styled desktop icons

--- a/_theme.scss
+++ b/_theme.scss
@@ -1,3 +1,4 @@
 $taskbarBlack: rgba(39, 39, 39, 0.808);
 $taskbarSearchBarGrey: rgb(182, 182, 182);
 $taskbarHoverGrey: rgb(110, 110, 110);
+$desktopIconHoverGrey: rgba(206, 206, 206, 0.233);
