--- a/styles.scss
+++ b/styles.scss
@@ -40,7 +40,7 @@ body {
   //this needs to be at the bottom of the screen
   position: fixed;
   bottom: 0;
-  background-color: $taskbarBlack;
+  background-color: $startMenuGrey; //more correct color
   left: 0;
   display: flex;
   flex-direction: column-reverse;
