changed font to windows 10 default

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
   background-repeat: no-repeat;
   resize: both;
   overflow: hidden;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .desktop {
