--- a/styles.scss
+++ b/styles.scss
@@ -6,6 +6,7 @@ body {
   background-repeat: no-repeat;
   resize: both;
   overflow: hidden;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   //add windows font
 }
 .desktop {
