--- a/styles.scss
+++ b/styles.scss
@@ -56,9 +56,11 @@ body {
     margin-bottom: 3rem;
     display: flex;
     flex-direction: column-reverse;
+
     img {
       height: 1.5rem;
       padding: 1rem;
+
       &:hover {
         background-color: $taskbarHoverGrey;
       }
@@ -76,59 +78,80 @@ footer {
     width: 100vw;
     display: flex;
     flex-direction: row;
-    //justify-content: space-between;
+    justify-content: space-between;
 
-    .Taskbar__Start {
-      background-image: url("images/icons8-windows-10-30White.png"); //this isn't centered
-      background-repeat: no-repeat;
-      padding: 0.5rem;
+    .taskBar--left {
+      display: flex;
+      flex-direction: row;
+      .Taskbar__Start {
+        position: absolute;
+        //top: 25%;
+        //left: 0.25%;
+        background-image: url("images/icons8-windows-10-30White.png"); //this isn't centered
+        background-repeat: no-repeat;
+        //background-color: red;
+        //padding: 1rem 1rem;
 
-      &:hover {
-        background-image: url("images/icons8-windows-10-30Blue.png"); //this isn't the right blue
-        background-color: $taskbarHoverGrey;
+        &:hover {
+          background-image: url("images/icons8-windows-10-30Blue.png"); //this isn't the right blue
+          background-color: $taskbarHoverGrey;
+        }
       }
-    }
-    .Taskbar__Search {
-      margin-left: 0.7rem;
-      background-color: $taskbarBlack;
-      align-self: center;
-      border: 1.5px solid white;
-      &:hover {
-        border: 1.5px solid $taskbarSearchBarGrey;
-      }
-
-      .Taskbar__SearchBar {
+      .Taskbar__Search {
+        position: absolute;
+        left: 2%;
+        margin-left: 0.7rem;
         background-color: $taskbarBlack;
-        color: $taskbarSearchBarGrey;
-        border-style: none;
-        padding: 0.5rem; //on click this needs to change to invert text and background colors and pop up a menu
-      }
-    }
-
-    .TaskBar__IconHolder {
-      display: flex;
-      justify-content: center;
-      .Taskbar__Icon span {
+        // align-self: center;
+        border: 1.5px solid white;
         &:hover {
-          background-color: $taskbarHoverGrey;
+          border: 1.5px solid $taskbarSearchBarGrey;
+          background-color: $taskbarHoverGrey; //not sure if right
         }
-      }
 
-      .Taskbar__Icon img {
-        margin: 0.3rem;
-
-        &:hover {
-          background-color: $taskbarHoverGrey;
+        .Taskbar__SearchBar {
+          background-color: $taskbarBlack;
+          color: $taskbarSearchBarGrey;
+          border-style: none;
+          padding: 0.5rem; //on click this needs to change to invert text and background colors and pop up a menu
         }
       }
     }
 
-    .Taskbar__ClockHolder {
+    .taskBar--right {
       display: flex;
-      flex-direction: column;
-      font-size: 1rem;
-      &:hover {
-        background-color: $taskbarHoverGrey;
+      flex-direction: row;
+      .TaskBar__IconHolder {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        //padding-top: 1rem;
+        .Taskbar__Icon span {
+          &:hover {
+            background-color: $taskbarHoverGrey;
+          }
+        }
+
+        .Taskbar__Icon img {
+          margin: 0.3rem;
+
+          &:hover {
+            background-color: $taskbarHoverGrey;
+          }
+        }
+      }
+      .KeyboardLangIcon {
+        text-align: center;
+        line-height: 3rem;
+      }
+
+      .Taskbar__ClockHolder {
+        display: flex;
+        flex-direction: column;
+        font-size: 1rem;
+        &:hover {
+          background-color: $taskbarHoverGrey;
+        }
       }
     }
   }
