--- a/styles.scss
+++ b/styles.scss
@@ -17,6 +17,7 @@ body {
 
   .desktop__Icon {
     padding-bottom: 0.5rem;
+    border: solid 2px transparent;
     img {
       height: 5rem;
     }
