--- a/styles.scss
+++ b/styles.scss
@@ -8,6 +8,7 @@ body {
   overflow: hidden;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   height: 100vh;
+  width: 100vw;
 }
 .desktop {
   display: grid;
