added some javascript. at least it isn't throwing errors, although it isnt doing its job

--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,8 @@ body {
 .desktop .hidden {
   display: none;
 }
-.desktop .displayable {
-  display: block;
+.desktop .display {
+  display: flex;
 }
 
 .StartMenu {
