--- a/styles.css
+++ b/styles.css
@@ -41,14 +41,22 @@ body {
   margin: 0;
   transform: translateX(30rem);
   position: absolute;
+  background-color: rgb(248, 248, 248);
+  z-index: 1;
+}
+.desktop #textfileModal--modal .fileBar__close {
+  text-align: right;
+  padding-right: 0.5rem;
 }
 .desktop #textfileModal--modal .textFile__modal--text {
   background-color: white;
   margin: 0;
+  padding: 0.5rem;
 }
 .desktop #formModal--modal {
   position: absolute;
   transform: translateX(40rem);
+  z-index: 1;
 }
 .desktop #formModal--modal .formFile__modal--form {
   width: 15rem;
@@ -56,6 +64,7 @@ body {
 .desktop #picturefileModal--modal {
   position: absolute;
   transform: translateX(20rem);
+  z-index: 1;
 }
 .desktop #picturefileModal--modal .pictureFile__windoge {
   height: 20rem;
