fixed scss, js not quite working?

--- a/styles.scss
+++ b/styles.scss
@@ -133,7 +133,7 @@ footer {
       display: flex;
       flex-direction: row;
 
-      .Taskbar__Start {
+      .Taskbar__StartHolder {
         position: absolute;
         top: 25%;
         left: 0.25%;
