--- a/styles.css
+++ b/styles.css
@@ -118,14 +118,14 @@ footer .Taskbar .taskBar--left {
   display: flex;
   flex-direction: row;
 }
-footer .Taskbar .taskBar--left .Taskbar__Start {
+footer .Taskbar .taskBar--left .Taskbar__StartHolder {
   position: absolute;
   top: 25%;
   left: 0.25%;
   background-image: url("images/icons8-windows-10-30White.png");
   background-repeat: no-repeat;
 }
-footer .Taskbar .taskBar--left .Taskbar__Start:hover {
+footer .Taskbar .taskBar--left .Taskbar__StartHolder:hover {
   background-image: url("images/icons8-windows-10-30Blue.png");
 }
 footer .Taskbar .taskBar--left .Taskbar__Search {
