--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,6 @@ body {
   bottom: 0;
   background-color: rgb(49, 49, 49);
   left: 0;
-  display: flex;
   flex-direction: column-reverse;
   height: 50vh;
   width: 30vw;
@@ -100,6 +99,14 @@ body {
 }
 .StartMenu .StartMenu__SettingsOptions img:hover {
   background-color: rgb(110, 110, 110);
+}
+
+.startHidden {
+  display: none;
+}
+
+.startDisplay {
+  display: flex;
 }
 
 footer {
