--- a/styles.scss
+++ b/styles.scss
@@ -92,7 +92,7 @@ body {
   bottom: 0;
   background-color: $startMenuGrey; //more correct color
   left: 0;
-  display: flex;
+
   flex-direction: column-reverse;
   height: 50vh;
   width: 30vw;
@@ -115,6 +115,12 @@ body {
       }
     }
   }
+}
+.startHidden {
+  display: none;
+}
+.startDisplay {
+  display: flex;
 }
 
 footer {
