--- a/styles.css
+++ b/styles.css
@@ -44,9 +44,36 @@ body {
   background-color: rgb(248, 248, 248);
   z-index: 1;
 }
-.desktop #textfileModal--modal .fileBar__close {
-  text-align: right;
+.desktop #textfileModal--modal .filebar {
+  display: flex;
+  justify-content: right;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+.desktop #textfileModal--modal .filebar .fileBar__maximise__holder:hover {
+  background-color: rgb(182, 182, 182);
+}
+.desktop #textfileModal--modal .filebar .fileBar__maximise__holder .fileBar__maximise {
+  border: 1px solid black;
+  width: 10px;
+  height: 10px;
+  margin: 0.5rem;
+  margin: 0.5rem;
+}
+.desktop #textfileModal--modal .filebar .fileBar_minimise {
+  margin: 0.2rem;
+  padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+.desktop #textfileModal--modal .filebar .fileBar_minimise:hover {
+  background-color: rgb(182, 182, 182);
+}
+.desktop #textfileModal--modal .filebar .fileBar__close {
+  padding: 0.3rem;
+}
+.desktop #textfileModal--modal .filebar .fileBar__close:hover {
+  background-color: rgb(255, 38, 0);
+  color: white;
 }
 .desktop #textfileModal--modal .textFile__modal--text {
   background-color: white;
@@ -57,9 +84,48 @@ body {
   position: absolute;
   transform: translateX(40rem);
   z-index: 1;
+  background-color: white;
+}
+.desktop #formModal--modal .filebar {
+  display: flex;
+  justify-content: right;
+  flex-direction: row-reverse;
+  align-items: center;
+  border-bottom: 2px solid black;
+}
+.desktop #formModal--modal .filebar .fileBar__close {
+  padding: 0.5rem;
+}
+.desktop #formModal--modal .filebar .fileBar__close:hover {
+  background-color: rgb(255, 38, 0);
+  color: white;
+}
+.desktop #formModal--modal .filebar .fileBar__maximise__holder:hover {
+  background-color: rgb(182, 182, 182);
+}
+.desktop #formModal--modal .filebar .fileBar__maximise__holder .fileBar__maximise {
+  border: 1px solid black;
+  width: 10px;
+  height: 10px;
+  margin: 0.5rem;
+}
+.desktop #formModal--modal .filebar .fileBar_minimise {
+  margin: 0.2rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.desktop #formModal--modal .filebar .fileBar_minimise:hover {
+  background-color: rgb(182, 182, 182);
 }
 .desktop #formModal--modal .formFile__modal--form {
-  width: 15rem;
+  width: 25rem;
+}
+.desktop #formModal--modal .formFile__modal--form .formFile__modal__formContents {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  margin: 1rem;
+  padding: 0.5rem;
 }
 .desktop #picturefileModal--modal {
   position: absolute;
