--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,40 @@ body {
   transform: translateX(20rem);
   z-index: 1;
 }
+.desktop #picturefileModal--modal .filebar {
+  display: flex;
+  justify-content: right;
+  flex-direction: row-reverse;
+  align-items: center;
+  border-bottom: 2px solid black;
+  background-color: rgb(49, 49, 49);
+}
+.desktop #picturefileModal--modal .filebar .fileBar__close {
+  padding: 0.5rem;
+  color: white;
+}
+.desktop #picturefileModal--modal .filebar .fileBar__close:hover {
+  background-color: rgb(255, 38, 0);
+  color: white;
+}
+.desktop #picturefileModal--modal .filebar .fileBar__maximise__holder:hover {
+  background-color: rgb(182, 182, 182);
+}
+.desktop #picturefileModal--modal .filebar .fileBar__maximise__holder .fileBar__maximise {
+  border: 1px solid white;
+  width: 10px;
+  height: 10px;
+  margin: 0.5rem;
+}
+.desktop #picturefileModal--modal .filebar .fileBar_minimise {
+  margin: 0.2rem;
+  color: white;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.desktop #picturefileModal--modal .filebar .fileBar_minimise:hover {
+  background-color: rgb(182, 182, 182);
+}
 .desktop #picturefileModal--modal .pictureFile__windoge {
   height: 20rem;
 }
@@ -150,6 +184,18 @@ body {
   flex-direction: column-reverse;
   height: 50vh;
   width: 30vw;
+}
+.StartMenu .StartMenu__IconLink {
+  display: flex;
+  flex-direction: row;
+  color: white;
+  padding: 0.1rem;
+}
+.StartMenu .StartMenu__IconLink:hover {
+  background-color: rgb(110, 110, 110);
+}
+.StartMenu .startMenu__Icon--pic {
+  margin: 0.5rem;
 }
 .StartMenu .StartMenu__Icons {
   margin-left: 4rem;
