--- a/styles.scss
+++ b/styles.scss
@@ -148,6 +148,44 @@ body {
     position: absolute;
     transform: translateX(20rem);
     z-index: 1;
+    .filebar {
+      display: flex;
+      justify-content: right;
+      flex-direction: row-reverse;
+      align-items: center;
+      border-bottom: 2px solid black;
+      background-color: $startMenuGrey;
+
+      .fileBar__close {
+        padding: 0.5rem;
+        color: white;
+
+        &:hover {
+          background-color: rgb(255, 38, 0);
+          color: white;
+        }
+      }
+      .fileBar__maximise__holder {
+        &:hover {
+          background-color: $taskbarSearchBarGrey;
+        }
+        .fileBar__maximise {
+          border: 1px solid white;
+          width: 10px;
+          height: 10px;
+          margin: 0.5rem;
+        }
+      }
+      .fileBar_minimise {
+        margin: 0.2rem;
+        color: white;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+        &:hover {
+          background-color: $taskbarSearchBarGrey;
+        }
+      }
+    }
 
     .pictureFile__windoge {
       height: 20rem;
@@ -172,6 +210,19 @@ body {
   flex-direction: column-reverse;
   height: 50vh;
   width: 30vw;
+
+  .StartMenu__IconLink {
+    display: flex;
+    flex-direction: row;
+    color: white;
+    padding: 0.1rem;
+    &:hover {
+      background-color: $taskbarHoverGrey;
+    }
+  }
+  .startMenu__Icon--pic {
+    margin: 0.5rem;
+  }
 
   .StartMenu__Icons {
     //margin-bottom: 1rem; //hacky, but they are in the right place
