--- a/styles.css
+++ b/styles.css
@@ -232,6 +232,7 @@ footer .Taskbar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  color: white;
 }
 footer .Taskbar .taskBar--left {
   display: flex;
@@ -278,6 +279,7 @@ footer .Taskbar .taskBar--right .TaskBar__IconHolder .Taskbar__Icon span:hover {
 }
 footer .Taskbar .taskBar--right .TaskBar__IconHolder .Taskbar__Icon img {
   margin: 0.3rem;
+  padding: 0.2rem;
 }
 footer .Taskbar .taskBar--right .TaskBar__IconHolder .Taskbar__Icon img:hover {
   background-color: rgb(110, 110, 110);
@@ -285,11 +287,13 @@ footer .Taskbar .taskBar--right .TaskBar__IconHolder .Taskbar__Icon img:hover {
 footer .Taskbar .taskBar--right .KeyboardLangIcon {
   text-align: center;
   line-height: 3rem;
+  padding: 0.7rem;
 }
 footer .Taskbar .taskBar--right .Taskbar__ClockHolder {
   display: flex;
   flex-direction: column;
   font-size: 1rem;
+  margin-left: 1rem;
 }
 footer .Taskbar .taskBar--right .Taskbar__ClockHolder:hover {
   background-color: rgb(110, 110, 110);
