added the draggable set stuff to the modals - I know it works, I have managed to drag one of them once!

--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,13 @@ body {
 .desktop .display {
   display: flex;
 }
+.desktop .draggable {
+  cursor: pointer;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  transition: border-radius 0.5s ease-out, background-color 0.5s ease-out;
+}
 
 .StartMenu {
   position: fixed;
