--- a/styles.scss
+++ b/styles.scss
@@ -87,6 +87,9 @@ body {
       margin: 0;
       padding: 0.5rem;
     }
+    @media screen and (max-width: 1000px) {
+      left: -20rem;
+    }
   }
 
   #formModal--modal {
@@ -141,6 +144,10 @@ body {
         margin: 1rem;
         padding: 0.5rem;
       }
+    }
+
+    @media screen and (max-width: 1000px) {
+      left: -25rem;
     }
   }
 
@@ -200,6 +207,7 @@ body {
   }
 
   .dragging {
+    cursor: pointer;
   }
   .draggable {
     cursor: pointer;
@@ -207,6 +215,10 @@ body {
     top: 0px;
     left: 0px;
     transition: border-radius 0.5s ease-out, background-color 0.5s ease-out;
+
+    @media screen and (max-width: 1000px) {
+      left: -7rem;
+    }
   }
 }
 
@@ -220,6 +232,10 @@ body {
   flex-direction: column-reverse;
   height: 50vh;
   width: 30vw;
+  @media screen and (max-width: 1000px) {
+    height: 70vh;
+    width: 70vw;
+  }
 
   .StartMenu__IconLink {
     display: flex;
@@ -301,6 +317,9 @@ footer {
           border: 1.5px solid $taskbarSearchBarGrey;
           background-color: $taskbarHoverGrey; //not sure if right
         }
+        @media screen and (max-width: 1000px) {
+          margin-left: 3rem;
+        }
 
         .Taskbar__SearchBar {
           background-color: $taskbarBlack;
@@ -344,6 +363,7 @@ footer {
         flex-direction: column;
         font-size: 1rem;
         margin-left: 1rem;
+
         &:hover {
           background-color: $taskbarHoverGrey;
         }
